[package]
name = "ustc-107-ssh"
version = "0.1.0"
edition = "2021"
description = "Rust CLI bridge experiments for USTC 107 Web Shell"
license = "MIT"
repository = "https://github.com/Develata/ustc-107-ssh"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net", "time", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
